Bug 95650 - CRASH when opening specific TXT with Calc under Windows
Summary: CRASH when opening specific TXT with Calc under Windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other Windows (All)
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.1.0
Keywords: regression
: 67601 (view as bug list)
Depends on:
Blocks: Arabic-and-Farsi RTL
  Show dependency treegraph
 
Reported: 2015-11-07 08:03 UTC by Mike Kaganski
Modified: 2024-08-04 21:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (220 bytes, application/x-zip-compressed)
2015-11-07 08:03 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2015-11-07 08:03:41 UTC
Created attachment 120356 [details]
Bugdoc

Opening the TXT in attachment with Calc under Windows, like this:

[PathToLO]\soffice.exe --calc [PathTo]\Bug.txt

crashes LO.

Crash didn't happen with versions prior to 5.0 -> regression.
The problem is in UniscribeLayout::LayoutText(ImplLayoutArgs & rArgs), where an assertion is fired on RTL text. Note that the assertion was threr long before 5.0, so it must be change in some other code that revealed this error.

Confirming and taking myself.
Comment 1 Mike Kaganski 2015-11-07 08:50:53 UTC
Posted a patch to gerrit:
https://gerrit.libreoffice.org/19835

Michael, you have fixed the bug 47553 with http://cgit.freedesktop.org/libreoffice/core/commit/?id=cec68bceba9aa1e984d74897fcd7bf4db702d14b, which added the assertion.

Could you please take a look at the patch? Thank you.
Comment 2 MM 2015-11-07 11:31:35 UTC
Shouldn't that < be a <= ???
Comment 3 Mike Kaganski 2015-11-07 11:39:49 UTC
(In reply to MM from comment #2)
> Shouldn't that < be a <= ???


No need to set it if it's already equal
Comment 4 Commit Notification 2015-11-10 10:55:20 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f4a4bbce92fe753678b218c265f7180c306ddf73

tdf#95650: Replace wrong assertion with condition

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Maxim Monastirsky 2015-11-10 11:20:47 UTC
*** Bug 67601 has been marked as a duplicate of this bug. ***