tdf#95650: Replace wrong assertion with condition

When UniscribeLayout::LayoutText(ImplLayoutArgs & rArgs) is run with
BiDiRtl flag, and some skipped VisualItems was reversed in lines 908-927,
it's possible that they will arrive in reverse order to the code adjusting
min, so this assertion may fire.

This situation is not erroneous, so simply replacing the assert with "if".

Change-Id: Icb244502dd00b4c08a2c5192369ee66d743b0dcc